@@ -5,7 +5,7 @@ from plone.app.testing import applyProfile
 from zope.configuration import xmlconfig
 
 
-class StatusmessageLayer(PloneSandboxLayer):
+class ZCMLLayer(PloneSandboxLayer):
 
     defaultBases = (PLONE_FIXTURE, )
 
@@ -15,11 +15,21 @@ class StatusmessageLayer(PloneSandboxLayer):
                        ftw.globalstatusmessage,
                        context=configurationContext)
 
+STATUSMESSAGE_ZCML_LAYER = ZCMLLayer()
+STATUSMESSAGE_ZCML_FUNCTIONAL = FunctionalTesting(
+    bases=(STATUSMESSAGE_ZCML_LAYER, ),
+    name="ftw.globalstatusmessage:zcml:functional")
+
+
+class InstallationLayer(PloneSandboxLayer):
+
+    defaultBases = (STATUSMESSAGE_ZCML_LAYER, )
+
     def setUpPloneSite(self, portal):
         applyProfile(portal, 'ftw.globalstatusmessage:default')
 
 
-STATUSMESSAGE_FIXTURE = StatusmessageLayer()
+STATUSMESSAGE_FIXTURE = InstallationLayer()
 STATUSMESSAGE_FUNCTIONAL = FunctionalTesting(
     bases=(STATUSMESSAGE_FIXTURE, ),
     name="ftw.globalstatusmessage:functional")
