@@ -55,7 +55,6 @@ setup(name='ftw.globalstatusmessage',
         'ftw.upgrade',
         'plone.app.form',
         'plone.app.layout',
-        'plone.theme',
         'plone.z3cform',
         'setuptools',
         'z3c.form',
